--- a/MEI-Master/index.html
+++ b/MEI-Master/index.html
@@ -233,7 +233,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZfDEE62mg_IxJAJctQtb7d0nUkHH1Bvo&callback=initMap">
       </script>
 
-    <!-- AIzaSyDZfDEE62mg_IxJAJctQtb7d0nUkHH1Bvo -->
+    <!-- CLAVE GOOGLE MAPS API// AIzaSyDZfDEE62mg_IxJAJctQtb7d0nUkHH1Bvo -->
     
 </body>
 
