--- a/MEI-Master/index.html
+++ b/MEI-Master/index.html
@@ -234,6 +234,7 @@
       </script>
 
     <!-- CLAVE GOOGLE MAPS API// AIzaSyDZfDEE62mg_IxJAJctQtb7d0nUkHH1Bvo -->
+    <!-- PRUEBA VSCODE 2.0 -->
     
 </body>
 
