--- a/MEI-Master/index.html
+++ b/MEI-Master/index.html
@@ -10,6 +10,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta charset="utf-8">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,14 +27,14 @@
           <a href="#!" class="brand-logo">Mi Escuela Ideal</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-              <li><a href="sass.html"> Contactanos</a></li>
-              <li><a href="badges.html">Inicia Sesión </a></li>
-              <li><a href="collapsible.html">Registrate</a></li>
+              <li><a href="#"> Contactanos</a></li>
+              <li><a href="login.php">Inicia sesión </a></li>
+              <li><a href="signin.php">Registrate</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
-              <li><a href="sass.html">Contactanos</a></li>
-              <li><a href="badges.html">Inicia Sesión</a></li>
-              <li><a href="collapsible.html">Registrate</a></li>
+              <li><a href="#"> Contactanos</a></li>
+              <li><a href="login.php">Inicia sesión </a></li>
+              <li><a href="signin.php">Registrate</a></li>
           </ul>
         </div>
       </div>
