--- a/MEI-Master/resourses/footer.html
+++ b/MEI-Master/resourses/footer.html
@@ -2,50 +2,20 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Desarrolladores</h5>
+          <h5 class="white-text">Acerca de Nosotros</h5>
           
-
-          <ul class="collection">
-              <li class="collection-item avatar">
-                  <img src="https://scontent.fpbc1-1.fna.fbcdn.net/v/t1.0-9/13932920_1150654124991565_2927466632475900616_n.jpg?oh=25177d51376f16f0bc631aa8b2b98bc2&oe=5A61D539" alt="img_desarrollador" class="circle">
-                  <span class="title grey-text text-darken-3"><b>Diseñador Web</b></span>
-                  <p class="grey-text text-darken-3">
-                     Daniel Garnica Sánchez <br>
-                     thethaniel115@gmail.com
-                  </p>
-                </li>
-
-              <li class="collection-item avatar">
-                  <img src="https://scontent.fpbc1-1.fna.fbcdn.net/v/t1.0-9/15873231_1286323884757729_4393686555897294972_n.jpg?oh=0566d07095703caa8bc82ef2913d31e9&oe=5AAB07D1" alt="img_desarrollador" class="circle">
-                  <span class="title grey-text text-darken-3"><b>Programador</b></span>
-                  <p class="grey-text text-darken-3">
-                     Ramiro Estrada García <br>
-                     ramiroestradag@gmail.com
-                  </p>
-                </li>
-
-                <li class="collection-item avatar">
-                    <img src="https://scontent.fpbc1-1.fna.fbcdn.net/v/t1.0-9/17022444_1079188798860007_1580081589208064496_n.jpg?oh=ead07a1edbdae15aaeff8e404943b0e9&oe=5AA87F9F" alt="img_desarrollador" class="circle">
-                    <span class="title grey-text text-darken-3"><b>Programador</b></span>
-                    <p class="grey-text text-darken-3">
-                       Luis Mario Trejo Hinojosa <br>
-                       correodetrejoxd@gmail.com
-                    </p>
-                  </li>
-            </ul>
+          <p align="justify">
+            Nosotros miembros del Centro de Estudios Cientificos y Tecnológicos Campus Zacatecas desarrollamos esta plataforma con el fin de resolver una necesidad entro nosotros los estudiantes y resolverla utilizando las tecnologías y conocimientos abtenidos durante nuestro tiempo en el bachiller.
+          </p>
 
           <ul></ul>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Contacto</h5>
-          <ul>
-            <p class="white-text">
-              <b>Dirección:</b><br>
-              Boulevard El Bote S/N, 98160 Zacatecas, Zac.
-            </p>
-          </ul>
-
-          <div id="map"></div>
+          <h5 class="white-text">Redes Sociales</h5>
+          <div class="collection">
+              <a href="https://www.facebook.com/CECyT18ZacatecasIPN/" class="collection-item" uk-icon="icon: facebook">Facebook</a>
+              <a href="http://www.cecyt18.ipn.mx/Paginas/inicio.aspx" class="collection-item">Página Web</a>
+            </div>
 
         </div>
       </div>
