--- a/MEI-Master/index.html
+++ b/MEI-Master/index.html
@@ -46,7 +46,7 @@
               <img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?auto=format&fit=crop&w=1082&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D"> <!-- random image -->
               <div class="caption center-align"><br>
                 <h3>¿No sabes que estudiar?</h3>
-                <h5 class="light grey-text text-lighten-3">M.E.I. es la Solución</h5>
+                <h5 class="light grey-text text-lighten-3">M.E.I. es la solución</h5>
               </div>
             </li>
             <li>
@@ -59,7 +59,7 @@
             <li>
               <img src="https://orig00.deviantart.net/b927/f/2014/279/1/8/school_classroom__late_afternoon__by_enigma_xiii-d801u9q.png"> <!-- random image -->
               <div class="caption right-align">
-                <h3>Las mejores Universidades</h3>
+                <h3>Las mejores universidades</h3>
                 <h5 class="light grey-text text-lighten-3">Cerca de ti</h5>
               </div>
             </li>
