Cambios, correcciones y adiciones

--- a/MEI-Master/resourses/menu.html
+++ b/MEI-Master/resourses/menu.html
@@ -2,16 +2,30 @@
     <div class="nav-wrapper red darken-3">
         <div class="container" id="div_menu">
             <a href="#!" class="brand-logo">Mi Escuela Ideal</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse">
+                <i class="material-icons">menu</i>
+            </a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#"> Contactanos</a></li>
-                <li><a href="login.php">Inicia sesión </a></li>
-                <li><a href="signin.php">Registrate</a></li>
+                <li>
+                    <a href="#"> Contactanos</a>
+                </li>
+                <li>
+                    <a href="login.php">Inicia sesión </a>
+                </li>
+                <li>
+                    <a href="signin.php">Registrate</a>
+                </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
-                <li><a href="#"> Contactanos</a></li>
-                <li><a href="login.php">Inicia sesión </a></li>
-                <li><a href="signin.php">Registrate</a></li>
+                <li>
+                    <a href="#"> Contactanos</a>
+                </li>
+                <li>
+                    <a href="login.php">Inicia sesión </a>
+                </li>
+                <li>
+                    <a href="signin.php">Registrate</a>
+                </li>
             </ul>
         </div>
     </div>
