--- a/MEI-Master/resourses/header.html
+++ b/MEI-Master/resourses/header.html
@@ -10,3 +10,11 @@
 
 <!--Let browser know website is optimized for mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<?php 
+    session_start();
+    if(!isset($_SESSION['user'])){
+        header("Location: ../login.php");
+    }
+    $user = $_SESSION['user'];
+    include '../conn.php';
+?>
