--- a/MEI-Master/resourses/scripts.html
+++ b/MEI-Master/resourses/scripts.html
@@ -1,29 +1,30 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="../js/materialize.min.js"></script>
 <script>
-        $(document).ready(function(){
-        $('.slider').slider();
+  $(document).ready(function () {
+    $('.slider').slider();
+  });
+</script>
+<script>$(".button-collapse").sideNav();</script>
+<script>
+        $(document).ready(function () {
+          $('.parallax').parallax();
         });
-      </script>
-      <script>$(".button-collapse").sideNav();</script>
-      <script>
-        $(document).ready(function(){
-        $('.parallax').parallax();
-        });
-      </script>
+</script>
 
-      <!-- SCRIPT GOOGLE MAPS -->
-      <script>
-          function initMap() {
-            var uluru = {lat:  22.783898, lng: -102.617015}; 
-            var map = new google.maps.Map(document.getElementById('map'), {
-              zoom: 17,
-              center: uluru
-            });
-            var marker = new google.maps.Marker({
-              position: uluru,
-              map: map
-            });
-          }
-        </script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZfDEE62mg_IxJAJctQtb7d0nUkHH1Bvo&callback=initMap"></script>
+<!-- SCRIPT GOOGLE MAPS -->
+<script>
+        var map, marker,lati,long;;
+        function initMap() {
+          var uluru = { lat: 22.783898, lng: -102.617015 };
+          map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 17,
+            center: uluru
+          });
+          marker = new google.maps.Marker({
+            position: uluru,
+            map: map
+          });
+        }
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZfDEE62mg_IxJAJctQtb7d0nUkHH1Bvo&callback=initMap"></script>
