--- a/MEI-Master/resourses/menu.html
+++ b/MEI-Master/resourses/menu.html
@@ -1,7 +1,7 @@
 <nav>
     <div class="nav-wrapper red darken-3">
         <div class="container" id="div_menu">
-            <a href="#!" class="brand-logo">Mi Escuela Ideal</a>
+            <a href="#!" class="brand-logo truncate">Mi Escuela Ideal</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse">
                 <i class="material-icons">menu</i>
             </a>
@@ -17,6 +17,9 @@
                 </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
+                <li>
+                    <a href="#"><h5>Menú</h5></a><hr>
+                </li>
                 <li>
                     <a href="#"> Contactanos</a>
                 </li>
