Todo el PHP completamente funcional
Es tu turno @mrdanielg :'v

--- a/MEI-Master/MEI/form.html
+++ b/MEI-Master/MEI/form.html
@@ -23,7 +23,7 @@
 <body>
     <div class="body">
     <section>
-        <form action="accionesForm1.php" method="post" class="form">
+        <form action="formPHP.php" method="post" class="form">
 
             <div align="center" class="pregs">
                 <b class="preg">¿Te interesaría organizar una cooperacion grupal para comprar algo al aula?</b>
