--- a/MEI-Master/resourses/menu.html
+++ b/MEI-Master/resourses/menu.html
@@ -7,13 +7,11 @@
             </a>
             <ul class="right hide-on-med-and-down">
                 <li>
-                    <a href="#"> Contactanos</a>
+                    <a href="#">Contactanos</a>
                 </li>
+
                 <li>
-                    <a href="login.php">Inicia sesión </a>
-                </li>
-                <li>
-                    <a href="signin.php">Registrate</a>
+                    <a class="dropdown-button" href="" data-activates="dropdown1">Perfil<i class="material-icons right">arrow_drop_down</i></a>
                 </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
@@ -23,13 +21,19 @@
                 <li>
                     <a href="#"> Contactanos</a>
                 </li>
+
                 <li>
-                    <a href="login.php">Inicia sesión </a>
-                </li>
-                <li>
-                    <a href="signin.php">Registrate</a>
+                    <a href="signin.php">Perfil</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
+
+<!-- Dropdown Structure -->
+<ul id="dropdown1" class="dropdown-content">
+    <li><a href="../MEI/perfil.php">Mi Perfil</a></li>
+    <li class="divider"></li>
+    <li><a href="../MEI/logout.php">Cerrar Sesión</a></li>
+  </ul> 
