Cambios app-web

--- a/MEI-Master/resourses/footer.html
+++ b/MEI-Master/resourses/footer.html
@@ -4,7 +4,7 @@
       <div class="col l6 s12">
         <h5 class="white-text">Acerca de Nosotros</h5>
 
-        <p align="justify">
+        <p align="justify" style="color: white !important">
           Nosotros miembros del Centro de Estudios Cientificos y Tecnológicos Campus Zacatecas desarrollamos esta plataforma con el
           fin de resolver una necesidad entro nosotros los estudiantes y resolverla utilizando las tecnologías y conocimientos
           abtenidos durante nuestro tiempo en el bachiller.
