--- a/MEI-Master/index.html
+++ b/MEI-Master/index.html
@@ -107,8 +107,8 @@
         <div class="card grey lighten-4">
           <div class="card-content black-text">
             <span class="card-title">¿Qué es M.E.I.?</span>
-            <p class="" align="justify">M.E.I. es una plataforma web la cual ayuda a los estudiantes a elegír una carrera tomando en cuenta las habilidades
-              y gustos del estudante, determinando que es lo mejor para el así como las diferentes universidades que se encuentran
+            <p class="" align="justify">M.E.I. es una plataforma web la cual ayuda a los estudiantes a elegir una carrera tomando en cuenta las habilidades
+              y gustos del estudiante, determinando que es lo mejor para el así como las diferentes universidades que se encuentran
               cenca de este.</p>
           </div>
         </div>
