--- a/MEI-Master/resourses/scripts.html
+++ b/MEI-Master/resourses/scripts.html
@@ -8,6 +8,7 @@
 </div>
 <script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="../js/materialize.min.js"></script>
+<script type="text/javascript" src="../js/JSI.js"></script>
 <script>
         $(document).ready(function () {
           $('.slider').slider();
@@ -18,10 +19,7 @@
         });
 
         $('.modal').modal();
-</script>
 
-<!-- SCRIPT GOOGLE MAPS -->
-<script>
         var map, marker,lati,long;;
         function initMap() {
           var uluru = { lat: 22.783898, lng: -102.617015 };
