Ortografía, pinshis tokens ramiro xd

--- a/MEI-Master/resourses/footer.html
+++ b/MEI-Master/resourses/footer.html
@@ -5,9 +5,11 @@
         <h5 class="white-text">Acerca de Nosotros</h5>
 
         <p align="justify" style="color: white !important">
-          Nosotros miembros del Centro de Estudios Cientificos y Tecnológicos Campus Zacatecas desarrollamos esta plataforma con el
-          fin de resolver una necesidad entro nosotros los estudiantes y resolverla utilizando las tecnologías y conocimientos
-          abtenidos durante nuestro tiempo en el bachiller.
+
+          Como miembros del Centro de Estudios Cientificos y Tecnológicos Campus Zacatecas desarrollamos esta plataforma con el fin
+          de resolver una problemática que teníamos nosotros como estudiantes y resolverla utilizando las tecnologías y conocimientos
+          obtenidos durante nuestros estudios en el bachiller.
+          
         </p>
 
         <ul></ul>
