Reacomodo de la app

--- a/MEI-Master/public/resourses/header.html
+++ b/MEI-Master/public/resourses/header.html
@@ -1,10 +1,10 @@
 <!--Estilos-->
-<link rel="stylesheet" type="text/css" href="../css/estilos.css">
+<link rel="stylesheet" type="text/css" href="../../assets/css/estilos.css">
 <!--Import Google Icon Font-->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <!--Import materialize.css-->
-<link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
+<link type="text/css" rel="stylesheet" href="../../assets/css/materialize.min.css" media="screen,projection" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <meta charset="utf-8" />
 
@@ -16,7 +16,7 @@
         header("Location: ../login.php");
     }
     $user = $_SESSION['user'];
-    include '../conn.php';
+    include '../../private/conn.php';
     $res = mysqli_fetch_array(mysqli_query($con, "SELECT UID FROM usuario WHERE email = '{$_SESSION["user"]}'"), MYSQLI_NUM);
     $usr_uid = $res[0];
 ?>
