--- a/MEI-Master/public/index.html
+++ b/MEI-Master/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <!--Estilos-->
-  <link rel="stylesheet" type="text/css" href="css/estilos.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/estilos.css">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="../assets/css/materialize.min.css" media="screen,projection" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta charset="utf-8">
 
@@ -115,7 +115,7 @@
       </div>
 
       <div class="col s12 m6" id="div_img">
-        <img src="imgs/logo1.png" alt="Mei-Logo" id="img_inicio">
+        <img src="../assets/imgs/logo1.png" alt="Mei-Logo" id="img_inicio">
       </div>
     </div>
   </div>
@@ -243,35 +243,27 @@
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="../assets/js/materialize.min.js"></script>
   <script>
     $(document).ready(function () {
       $('.slider').slider();
+      $(".button-collapse").sideNav();
+      $('.parallax').parallax();
     });
-  </script>
-  <script>$(".button-collapse").sideNav();</script>
-  <script>
-          $(document).ready(function () {
-            $('.parallax').parallax();
-          });
-  </script>
-
-  <!-- SCRIPT GOOGLE MAPS -->
-  <script>
-        function initMap() {
-          var uluru = { lat: 22.783898, lng: -102.617015 };
-          var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 17,
-            center: uluru
-          });
-          var marker = new google.maps.Marker({
-            position: uluru,
-            map: map
-          });
-        }
+ 
+    function initMap() {
+      var uluru = { lat: 22.783898, lng: -102.617015 };
+      var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 17,
+        center: uluru
+      });
+      var marker = new google.maps.Marker({
+        position: uluru,
+        map: map
+      });
+    }
   </script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZfDEE62mg_IxJAJctQtb7d0nUkHH1Bvo&callback=initMap"></script>
-  <!-- CLAVE GOOGLE MAPS API// AIzaSyDZfDEE62mg_IxJAJctQtb7d0nUkHH1Bvo -->
 </body>
 
 </html>
