--- a/MEI-Master/public/resourses/scripts.html
+++ b/MEI-Master/public/resourses/scripts.html
@@ -6,9 +6,9 @@
         <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">De acuerdo</a>
     </div>
 </div>
-<script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="../js/materialize.min.js"></script>
-<script type="text/javascript" src="../js/JSI.js"></script>
+<script type="text/javascript" src="../../assets/js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="../../assets/js/materialize.min.js"></script>
+<script type="text/javascript" src="../../assets/js/JSI.js"></script>
 <script>
         $(document).ready(function () {
           $('.slider').slider();
