--- a/MEI-Master/public/index.html
+++ b/MEI-Master/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <!--Estilos-->
-  <link rel="stylesheet" type="text/css" href="../assets/css/estilos.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/estilos.css">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="../assets/css/materialize.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css" media="screen,projection" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta charset="utf-8">
 
@@ -238,7 +238,7 @@
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="../assets/js/materialize.min.js"></script>
+  <script type="text/javascript" src="assets/js/materialize.min.js"></script>
   <script>
     $(document).ready(function () {
       $('.slider').slider();
